--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="button">
-    </div>
+
+<img id="img" src="off.png" alt="">
+
     <script src="index.js"></script>
 </body>
 </html>
