--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img id="img" src="off.png" alt="">
+    <img id="bulb" src="off.png" alt="">
     <script src="index.js"></script>
 </body>
 </html>
